Добавлен и исправлен нумерикал методс и немного контроллеры